--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,3 +22,5 @@ jobs:
         cd ./AndroidStudioProject
         chmod +x ./gradlew
         ./gradlew build
+    - name: Debug print
+        find .
