--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,15 @@ jobs:
         ./gradlew build
     - name: Debug print
       run: find .
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+      with:
+        scan-type: 'fs'
+        scan-ref: "./AndroidStudioProject"
+        severity: 'CRITICAL,HIGH,MEDIUM,LOW'
+        output: 'trivy-results.sarif'
+    - name: Upload Trivy results to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v3
+      if: always() # Run even if the Trivy step failed
+      with:
+        sarif_file: trivy-results.sarif 
