--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
       uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
       with:
         scan-type: 'fs'
-        scan-ref: "./AndroidStudioProject"
+        input: './AndroidStudioProject/**/build/outputs'
         severity: 'CRITICAL,HIGH,MEDIUM,LOW'
         output: 'trivy-results.sarif'
     - name: Upload Trivy results to GitHub Code Scanning
